--- a/secciones/como-pedir.html
+++ b/secciones/como-pedir.html
@@ -50,9 +50,28 @@
     <main>
         <h1>COMO PEDIR</h1>
 
-        <p>Para poder hacernos tu pedido completa el siguiente formulario :) </p>
+        <p>sección de pedidos:
 
-        <form action="#" method="GET" >
+            ¡Bienvenidos a la sección de pedidos de AM Bakery! Estoy encantada de ofrecerte una variedad de opciones
+            deliciosas para satisfacer tus antojos dulces.
+
+            Te ofrezco una amplia variedad de productos, incluyendo pasteles, macarons, galletas y mucho más. Todos
+            mis productos son hechos a mano con ingredientes frescos y de la más alta calidad. Me enorgullece
+            ofrecer productos que son deliciosos y hermosos a la vista.
+
+            Para hacer un pedido, simplemente enviame un correo electrónico con los detalles de lo que estás buscando.
+            Incluye el tipo de producto que te gustaría pedir, la cantidad que necesitas y la fecha en que lo necesitas.
+            Me esforzo por responder a todos los pedidos lo antes posible y trabajo duro para asegurarte de que
+            tu pedido sea exactamente lo que estás buscando.
+
+            Si tienes alguna solicitud especial, como alergias alimentarias o preferencias dietéticas, házmelo saber y
+            hare todo lo posible para acomodarme a tus necesidades.
+        </p>
+        <p>¡Gracias por elegir AM Bakery para satisfacer tus antojos dulces! ¡Espero con ansias hacer algo delicioso
+            para ti pronto!
+        </p>
+
+        <form action="#" method="GET">
             <input type="text" placeholder="Nombre" name="NOMBRE" class="formulario">
             <input type="text" placeholder="Apellido" name="APELLIDO" class="formulario">
             <input type="text" placeholder="Nick Name" name="NICK-NAME" class="formulario">
@@ -73,10 +92,10 @@
             </select>
             <input type="number" placeholder="Cantidad" name="CANTIDADES" class="formulario">
             <br><br>
-            <textarea name="" id="" cols="70" rows="10" name="PEDIDO"  class="formulario">Hola Aye! Me gustaría encargarte...
+            <textarea name="" id="" cols="70" rows="10" name="PEDIDO" class="formulario">Hola Aye! Me gustaría encargarte...
             </textarea>
-            <input type="submit" value=" Enviar! "  class="formulario">
-            
+            <input type="submit" value=" Enviar! " class="formulario">
+
         </form>
     </main>
 
