--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -49,7 +49,7 @@
   <!-- Cuerpo -->
   <main>
     <h1>CONTACTO</h1>
-    <p>Loremte.</p>
+    <p>Tus comentarios y/o consultas son bienvenidos!!!</p>
 
     <form class="row g-3">
       <div class="col-6">
@@ -64,7 +64,6 @@
         <label for="inputEmail4" class="form-label">Email</label>
         <input type="email" class="form-control" id="inputEmail4">
       </div>
-
       <div class="col-md-6">
         <label for="inputCity" class="form-label">Tel</label>
         <input type="number" class="form-control" id="Tel" placeholder="0336-15458938">
