--- a/secciones/cursos.html
+++ b/secciones/cursos.html
@@ -49,8 +49,26 @@
         <h1>CURSOS</h1>
         <h2>Próximo Curso: Moldeado de Tortas!</h2>
         <div class="div-cursos">
-            <p>Estaré dictando este fantástico Curso de Modelado de Tortas el próximo luneas a las 19:00hs!.
-                Te espero!!.
+            <p>¡Hola a todos!
+
+                ¡Estoy emocionada de anunciar que en dos meses, AM Bakery ofrecerá un curso de pastelería en nuestro
+                sitio! Como única trabajadora de la panadería, me enorgullece compartir mis conocimientos sobre cómo
+                hacer deliciosos pasteles.
+
+                Durante el curso, aprenderás a hacer pasteles desde cero y cubriremos todo, desde la mezcla de
+                ingredientes hasta la decoración. Ya sea que estés buscando mejorar tus habilidades de pastelería o
+                simplemente quieras probar algo nuevo, este curso es para ti.
+
+                Nuestro curso se llevará a cabo en nuestras instalaciones de AM Bakery, donde tendrás acceso a todas las
+                herramientas y equipos que necesitarás. También contarás con mi guía y apoyo.
+
+                El curso se llevará a cabo los fines de semana durante cuatro semanas, comenzando el [fecha]. Las plazas
+                son limitadas, así que asegúrate de reservar tu lugar con anticipación. El costo del curso es de
+                [precio], que incluye todos los ingredientes y materiales necesarios.
+
+                Si estás interesado en reservar tu lugar o hacer cualquier pregunta, puedes contactarnos a través de
+                nuestra página web o en Instagram. ¡Espero verte en el curso y ayudarte a mejorar tus habilidades de
+                pastelería!
             </p>
             <iframe src="https://res.cloudinary.com/dfbwcrulp/video/upload/v1676421298/desarrollo_web/reel1_xshayc.mp4"
                 frameborder="0" class="videos-cursos"></iframe>
