--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -83,7 +83,7 @@
       </div>
 
       <div class="col-12">
-        <button type="submit" class="btn btn-primary"> Enviar </button>
+        <button type="submit" class="btn btn-primary bg-secondary text-dark border-0"> Enviar </button>
       </div>
     </form>
 
