--- a/secciones/creaciones.html
+++ b/secciones/creaciones.html
@@ -50,10 +50,15 @@
         <div class="grid-galeria">
             <div class="banner-principal">
                 <h1>CREACIONES</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum similique facere dolores quaerat
-                    recusandae reiciendis maiores quisquam culpa, quidem incidunt non natus aut repudiandae molestiae
-                    odio possimus dolorem nobis esse commodi molestias accusamus id sint perspiciatis aliquid. Natus
-                    iste praesentium, consequuntur quos illo ipsum, ut quam, minus nulla magni fugit?</p>
+                <p>En AM Bakery, cada postre es una obra de arte única, hecha a mano con amor y cuidado. Desde pasteles
+                    de bodas elegantes hasta galletas temáticas y macarons delicados, mis creaciones están hechas para
+                    impresionar. No creo en copiar las mismas recetas una y otra vez, cada postre es personalizado y
+                    diseñado especialmente para cada ocasión.
+
+                    Mi galería de creaciones muestra algunos de los diseños que he creado en el pasado. Desde diseños
+                    clásicos hasta creaciones más atrevidas, estoy segura de que encontrarás algo que te haga agua la
+                    boca. Si estás buscando algo más que un pastel o un postre ordinario, estás en el lugar correcto.
+                    Contáctame hoy para empezar a planificar tu próxima celebración.</p>
             </div>
             <div class="producto-1">
                 <img src="https://res.cloudinary.com/dfbwcrulp/image/upload/v1676417150/desarrollo_web/producto-1_os8f08.jpg"
