--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <a href="./secciones/cursos.html">CURSOS</a>
                 </li>
                 <li class="translate">
-                    <a href="./secciones/contacto.html">CONCTACTO</a>
+                    <a href="./secciones/contacto.html">CONTACTO</a>
                 </li>
             </ul>
         </nav>
