--- a/secciones/como-pedir.html
+++ b/secciones/como-pedir.html
@@ -40,7 +40,7 @@
                     <a href="./cursos.html">CURSOS</a>
                 </li>
                 <li class="translate">
-                    <a href="./contacto.html">CONCTACTO</a>
+                    <a href="./contacto.html">CONTACTO</a>
                 </li>
             </ul>
         </nav>
@@ -71,7 +71,7 @@
             para ti pronto!
         </p>
 
-        <form action="#" method="GET">
+        <form action="#" method="GET" class="form">
             <input type="text" placeholder="Nombre" name="NOMBRE" class="formulario">
             <input type="text" placeholder="Apellido" name="APELLIDO" class="formulario">
             <input type="text" placeholder="Nick Name" name="NICK-NAME" class="formulario">
@@ -92,7 +92,7 @@
             </select>
             <input type="number" placeholder="Cantidad" name="CANTIDADES" class="formulario">
             <br><br>
-            <textarea name="" id="" cols="70" rows="10" name="PEDIDO" class="formulario">Hola Aye! Me gustaría encargarte...
+            <textarea  cols="70" rows="10" name="PEDIDO" class="formulario texto-formulario">Hola Aye! Me gustaría encargarte...
             </textarea>
             <input type="submit" value=" Enviar! " class="formulario">
 
