--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -40,7 +40,7 @@
           <a href="./cursos.html">CURSOS</a>
         </li>
         <li class="translate">
-          <a href="./contacto.html" class="navegador__listaMenu-activo">CONCTACTO</a>
+          <a href="./contacto.html" class="navegador__listaMenu-activo">CONTACTO</a>
         </li>
       </ul>
     </nav>
