--- a/secciones/creaciones.html
+++ b/secciones/creaciones.html
@@ -38,7 +38,7 @@
                     <a href="./cursos.html">CURSOS</a>
                 </li>
                 <li class="translate">
-                    <a href="./contacto.html">CONCTACTO</a>
+                    <a href="./contacto.html">CONTACTO</a>
                 </li>
             </ul>
         </nav>
