--- a/secciones/cursos.html
+++ b/secciones/cursos.html
@@ -38,7 +38,7 @@
                     <a href="./cursos.html" class="navegador__listaMenu-activo">CURSOS</a>
                 </li>
                 <li class="translate">
-                    <a href="./contacto.html">CONCTACTO</a>
+                    <a href="./contacto.html">CONTACTO</a>
                 </li>
             </ul>
         </nav>
@@ -48,35 +48,51 @@
     <main>
         <h1>CURSOS</h1>
         <h2>Próximo Curso: Moldeado de Tortas!</h2>
-        <div class="div-cursos">
-            <p>¡Hola a todos!
 
-                ¡Estoy emocionada de anunciar que en dos meses, AM Bakery ofrecerá un curso de pastelería en nuestro
-                sitio! Como única trabajadora de la panadería, me enorgullece compartir mis conocimientos sobre cómo
-                hacer deliciosos pasteles.
+        <div class="curso">
+            <div class="texto-curso">
+                <p>¡Hola a todos!
 
-                Durante el curso, aprenderás a hacer pasteles desde cero y cubriremos todo, desde la mezcla de
-                ingredientes hasta la decoración. Ya sea que estés buscando mejorar tus habilidades de pastelería o
-                simplemente quieras probar algo nuevo, este curso es para ti.
+                    ¡Estoy emocionada de anunciar que en dos meses, AM Bakery ofrecerá un curso de pastelería en nuestro
+                    sitio! Como única trabajadora de la panadería, me enorgullece compartir mis conocimientos sobre cómo
+                    hacer deliciosos pasteles.
 
-                Nuestro curso se llevará a cabo en nuestras instalaciones de AM Bakery, donde tendrás acceso a todas las
-                herramientas y equipos que necesitarás. También contarás con mi guía y apoyo.
+                    Durante el curso, aprenderás a hacer pasteles desde cero y cubriremos todo, desde la mezcla de
+                    ingredientes hasta la decoración. Ya sea que estés buscando mejorar tus habilidades de pastelería o
+                    simplemente quieras probar algo nuevo, este curso es para ti.
 
-                El curso se llevará a cabo los fines de semana durante cuatro semanas, comenzando el [fecha]. Las plazas
-                son limitadas, así que asegúrate de reservar tu lugar con anticipación. El costo del curso es de
-                [precio], que incluye todos los ingredientes y materiales necesarios.
+                    Nuestro curso se llevará a cabo en nuestras instalaciones de AM Bakery, donde tendrás acceso a todas
+                    las
+                    herramientas y equipos que necesitarás. También contarás con mi guía y apoyo.
 
-                Si estás interesado en reservar tu lugar o hacer cualquier pregunta, puedes contactarnos a través de
-                nuestra página web o en Instagram. ¡Espero verte en el curso y ayudarte a mejorar tus habilidades de
-                pastelería!
-            </p>
-            <iframe src="https://res.cloudinary.com/dfbwcrulp/video/upload/v1676421298/desarrollo_web/reel1_xshayc.mp4"
-                frameborder="0" class="videos-cursos"></iframe>
+                    El curso se llevará a cabo los fines de semana durante cuatro semanas, comenzando el [fecha]. Las
+                    plazas
+                    son limitadas, así que asegúrate de reservar tu lugar con anticipación. El costo del curso es de
+                    [precio], que incluye todos los ingredientes y materiales necesarios.
+
+                    Si estás interesado en reservar tu lugar o hacer cualquier pregunta, puedes contactarnos a través de
+                    nuestra página web o en Instagram. ¡Espero verte en el curso y ayudarte a mejorar tus habilidades de
+                    pastelería!
+                </p>
+
+            </div>
+            <div class="video-curso">
+                <iframe
+                    src="https://res.cloudinary.com/dfbwcrulp/video/upload/v1676421298/desarrollo_web/reel1_xshayc.mp4"
+                    frameborder="0" class="video-curso-p"></iframe>
+
+            </div>
         </div>
 
 
 
+        
     </main>
+
+
+
+
+
     <!-- Pie de página -->
     <footer>
         <!-- Logo en pie de página -->
