--- a/secciones/quien-soy.html
+++ b/secciones/quien-soy.html
@@ -38,7 +38,7 @@
                     <a href="./cursos.html">CURSOS</a>
                 </li>
                 <li class="translate">
-                    <a href="./contacto.html">CONCTACTO</a>
+                    <a href="./contacto.html">CONTACTO</a>
                 </li>
             </ul>
         </nav>
@@ -47,28 +47,35 @@
     <!-- Cuerpo -->
     <main>
         <h1>QUIEN SOY</h1>
-        <p>La pastelería me apasiona, me da felicidad y me acompaña desde que puedo recordar.</p>
+        <div class="quien-soy">
+            <div class="banner-quien-soy">
+                <p>La pastelería me apasiona, me da felicidad y me acompaña desde que puedo recordar.</p>
+            </div>
+            <div class="foto-quien-soy">
+                <img src="https://res.cloudinary.com/dfbwcrulp/image/upload/v1676507205/desarrollo_web/aye_okylg8.jpg"
+                    alt="Foto Aye" class="foto-presentacion">
+            </div>
+            <div class="texto-quien-soy">
+                <p>¡Hola! Soy Aye, la apasionada pastelera detrás de AM Bakery. Me dedico a crear deliciosos productos
+                    de
+                    pastelería caseros que superen tus expectativas. Con un enfoque en utilizar los mejores ingredientes
+                    y
+                    técnicas tradicionales de pastelería, cada producto se elabora con cuidado para garantizar una
+                    experiencia
+                    única.
 
-        <div class="div-quien-soy">
-            <p>¡Hola! Soy Aye, la apasionada pastelera detrás de AM Bakery. Me dedico a crear deliciosos productos de
-                pastelería caseros que superen tus expectativas. Con un enfoque en utilizar los mejores ingredientes y
-                técnicas tradicionales de pastelería, cada producto se elabora con cuidado para garantizar una
-                experiencia
-                única.
+                    Como una pastelería dirigida por una sola persona, me comprometo a brindar un servicio personalizado
+                    y
+                    pedidos a medida que se adapten a tu gusto y estilo. Creo que cada cliente merece una experiencia
+                    única
+                    y
+                    especial, y eso es exactamente lo que obtendrás en AM Bakery.
 
-                Como una pastelería dirigida por una sola persona, me comprometo a brindar un servicio personalizado y
-                pedidos a medida que se adapten a tu gusto y estilo. Creo que cada cliente merece una experiencia única
-                y
-                especial, y eso es exactamente lo que obtendrás en AM Bakery.
-
-                ¡Gracias por elegir AM Bakery y confiar en mi pasión por la pastelería! ¡Espero poder brindarte los
-                mejores
-                productos de pastelería que hayas probado!</p>
-            <img src="https://res.cloudinary.com/dfbwcrulp/image/upload/v1676507205/desarrollo_web/aye_okylg8.jpg"
-                alt="Foto Aye" class="foto-presentacion">
-
+                    ¡Gracias por elegir AM Bakery y confiar en mi pasión por la pastelería! ¡Espero poder brindarte los
+                    mejores
+                    productos de pastelería que hayas probado!</p>
+            </div>
         </div>
-
 
 
     </main>
