--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="pastelería,macarons,tortas,alfajores,casero,riquisimo,calidad">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="icon"
-        href="https://res.cloudinary.com/dfbwcrulp/image/upload/v1676417148/desarrollo_web/ambakery_logo_w1yj3w.jpg">  
+        href="https://res.cloudinary.com/dfbwcrulp/image/upload/v1676417148/desarrollo_web/ambakery_logo_w1yj3w.jpg">
 
     <link rel="stylesheet" href="./css/style.css">
     <title>AM Bakery Home</title>
@@ -61,50 +62,49 @@
             confianza para todos tus momentos especiales. No te olvides de seguirme en las redes sociales para obtener
             ofertas exclusivas y ver todo el proceso de horneado.</p>
 
-
-
-
     </main>
+
     <!-- FOOTER  -->
     <footer>
+        <div class="footer">
+            <div class="logo-footer">
+                <a href="./index.html">
+                    <img src="https://res.cloudinary.com/dfbwcrulp/image/upload/v1676504920/desarrollo_web/logo.jpg"
+                        alt="AM Bakery Logo" class="img-footer">
+                </a>
+            </div>
+            <div class="seguime-footer">
+                <h4 class="tituloFooter">SEGUIME</h4>
 
-        <!-- Logo en pie de página -->
-        <a href="./index.html">
-            <img src="https://res.cloudinary.com/dfbwcrulp/image/upload/v1676504920/desarrollo_web/logo.jpg"
-                alt="AM Bakery Logo" class="img-footer">
-        </a>
+                <ul class="listaFooter">
+                    <li>
+                        <i class="fa-brands fa-instagram"></i>
+                        <a href="https://www.instagram.com/ambakery.ros/" target="_blank">Instagram</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="contacto-footer">
+                <h4 class="tituloFooter">CONTACTO</h4>
 
-        <h4 class="tituloFooter">SEGUIME</h4>
-
-        <ul class="listaFooter">
-            <li>
-                <i class="fa-brands fa-instagram"></i>
-                <a href="https://www.instagram.com/ambakery.ros/" target="_blank">Instagram</a>
-            </li>
-        </ul>
-
-        <h4 class="tituloFooter">CONTACTO</h4>
-
-        <ul class="listaFooter">
-            <li>
-                <i class="fa-solid fa-phone"></i>
-                <a href="tel:+5493412793436">Teléfono</a>
-            </li>
-            <li>
-                <i class="fa-solid fa-envelope"></i>
-                <a href="mailto:ayelenmiretti@gmail.com">Mail</a>
-            </li>
-        </ul>
-
+                <ul class="listaFooter">
+                    <li>
+                        <i class="fa-solid fa-phone"></i>
+                        <a href="tel:+5493412793436">Teléfono</a>
+                    </li>
+                    <li>
+                        <i class="fa-solid fa-envelope"></i>
+                        <a href="mailto:ayelenmiretti@gmail.com">Mail</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </footer>
 
-   
+
     <script src="https://kit.fontawesome.com/b91bdf0c16.js" crossorigin="anonymous"></script>
     <script src="./js/wow.js"></script>
     <script>
         new WOW().init();
     </script>
 </body>
-
-
 </html>
