--- a/secciones/como-pedir.html
+++ b/secciones/como-pedir.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="pastelería,pedido,encargo,cantidad,fecha,datos personales,comentarios">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="icon"
         href="https://res.cloudinary.com/dfbwcrulp/image/upload/v1676417148/desarrollo_web/ambakery_logo_w1yj3w.jpg">
@@ -79,7 +80,7 @@
             <input type="number" placeholder="Tel" name="TEL" class="formulario">
             <input type="email" placeholder="Email" name="EMAIL" class="formulario">
             <br><br>
-            <select name="Opciones">
+            <select name="Opciones" class="opciones-como-pedir">
                 <option value="">Opciones</option>
                 <option value="">Torta Ensueño</option>
                 <option value="">Alfajores Cumbre Argentina</option>
@@ -92,7 +93,7 @@
             </select>
             <input type="number" placeholder="Cantidad" name="CANTIDADES" class="formulario">
             <br><br>
-            <textarea  cols="70" rows="10" name="PEDIDO" class="formulario texto-formulario">Hola Aye! Me gustaría encargarte...
+            <textarea cols="70" rows="10" name="PEDIDO" class="formulario texto-formulario">Hola Aye! Me gustaría encargarte...
             </textarea>
             <input type="submit" value=" Enviar! " class="formulario">
 
@@ -102,35 +103,38 @@
 
     <!-- Pie de página -->
     <footer>
-        <!-- Logo en pie de página -->
-        <a href="../index.html">
-            <img src="https://res.cloudinary.com/dfbwcrulp/image/upload/v1676504920/desarrollo_web/logo.jpg"
-                alt="AM Bakery Logo" class="img-footer">
-        </a>
+        <div class="footer">
+            <div class="logo-footer">
+                <a href="./index.html">
+                    <img src="https://res.cloudinary.com/dfbwcrulp/image/upload/v1676504920/desarrollo_web/logo.jpg"
+                        alt="AM Bakery Logo" class="img-footer">
+                </a>
+            </div>
+            <div class="seguime-footer">
+                <h4 class="tituloFooter">SEGUIME</h4>
 
-        <h4 class="tituloFooter">SEGUIME</h4>
+                <ul class="listaFooter">
+                    <li>
+                        <i class="fa-brands fa-instagram"></i>
+                        <a href="https://www.instagram.com/ambakery.ros/" target="_blank">Instagram</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="contacto-footer">
+                <h4 class="tituloFooter">CONTACTO</h4>
 
-        <!-- Lista no ordenada -->
-        <ul class="listaFooter">
-            <li>
-                <i class="fa-brands fa-instagram"></i>
-                <a href="https://www.instagram.com/ambakery.ros/" target="_blank">Instagram</a>
-            </li>
-        </ul>
-
-        <h4 class="tituloFooter">CONTACTO</h4>
-
-        <!-- Lista no ordenada -->
-        <ul class="listaFooter">
-            <li>
-                <i class="fa-solid fa-phone"></i>
-                <a href="tel:+5493412793436">Teléfono</a>
-            </li>
-            <li>
-                <i class="fa-solid fa-envelope"></i>
-                <a href="mailto:ayelenmiretti@gmail.com">Mail</a>
-            </li>
-        </ul>
+                <ul class="listaFooter">
+                    <li>
+                        <i class="fa-solid fa-phone"></i>
+                        <a href="tel:+5493412793436">Teléfono</a>
+                    </li>
+                    <li>
+                        <i class="fa-solid fa-envelope"></i>
+                        <a href="mailto:ayelenmiretti@gmail.com">Mail</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </footer>
 
     <script src="https://kit.fontawesome.com/b91bdf0c16.js" crossorigin="anonymous"></script>
