--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="pastelería,macarons,tortas,alfajores,casero,riquisimo,calidad">
+    <meta name="description"
+        content="La mejor pastelería de Rosario creada con amor y profesionalidad. Tortas, macarons, alfajores de excelente calidad.">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="icon"
         href="https://res.cloudinary.com/dfbwcrulp/image/upload/v1676417148/desarrollo_web/ambakery_logo_w1yj3w.jpg">
@@ -107,4 +109,5 @@
         new WOW().init();
     </script>
 </body>
+
 </html>
