--- a/secciones/creaciones.html
+++ b/secciones/creaciones.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Rainbow Party,macarons,tortas,alfajores,Stargazers,creaciones">
+    <meta name="description"
+        content="Bienvenido a mi galeria de Creaciones.">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="icon"
         href="https://res.cloudinary.com/dfbwcrulp/image/upload/v1676417148/desarrollo_web/ambakery_logo_w1yj3w.jpg">
