--- a/secciones/cursos.html
+++ b/secciones/cursos.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="pastelería,curso,fechas,modelado,decoración,armado,cocción">
+    <meta name="description"
+        content="Te comento los nuevos cursos disponibles para que puedas perfeccionarte en lo que más te gusta">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="icon"
         href="https://res.cloudinary.com/dfbwcrulp/image/upload/v1676417148/desarrollo_web/ambakery_logo_w1yj3w.jpg">
