--- a/secciones/quien-soy.html
+++ b/secciones/quien-soy.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="pastelería,Ayelen,Miretti,pastelera,chef">
+    <meta name="description"
+        content="Te cuento un poco de mí, sobre mi historia y como llegué a dedicarme a la pastelería.">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="icon"
         href="https://res.cloudinary.com/dfbwcrulp/image/upload/v1676417148/desarrollo_web/ambakery_logo_w1yj3w.jpg">
