--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         content="La mejor pastelería de Rosario creada con amor y profesionalidad. Tortas, macarons, alfajores de excelente calidad.">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="icon"
-        href="https://res.cloudinary.com/dfbwcrulp/image/upload/v1676418328/desarrollo_web/macaron-rosa.jpg">
+        href="./recursos/macaron-rosa.jpg">
     <link rel="stylesheet" href="./css/style.css">
     <title>AM Bakery Home</title>
 </head>
