--- a/secciones/como-pedir.html
+++ b/secciones/como-pedir.html
@@ -9,9 +9,7 @@
     <meta name="description" content="Aquí podrás realizar tu pedido.">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="icon"
-        href="https://res.cloudinary.com/dfbwcrulp/image/upload/v1676417148/desarrollo_web/ambakery_logo_w1yj3w.jpg">
-
-
+    href="../recursos/macaron-rosa.jpg">
     <link rel="stylesheet" href="../css/style.css">
     <title>COMO PEDIR</title>
 </head>
