--- a/secciones/cursos.html
+++ b/secciones/cursos.html
@@ -10,7 +10,7 @@
         content="Te comento los nuevos cursos disponibles para que puedas perfeccionarte en lo que más te gusta">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="icon"
-        href="https://res.cloudinary.com/dfbwcrulp/image/upload/v1676417148/desarrollo_web/ambakery_logo_w1yj3w.jpg">
+    href="../recursos/macaron-rosa.jpg">
     <link rel="stylesheet" href="../css/style.css">
     <title>CURSOS</title>
 </head>
