--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -10,7 +10,7 @@
         content="Te dejo una forma simple de contactarte conmigo por cualquier duda o sugerencia.">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <link rel="icon"
-    href="https://res.cloudinary.com/dfbwcrulp/image/upload/v1676417148/desarrollo_web/ambakery_logo_w1yj3w.jpg">
+  href="../recursos/macaron-rosa.jpg">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <link rel="stylesheet" href="../css/style.css">
